--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Infinite Scrolling</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container"></div>
   </body>
 </html>
+<script src="index.js"></script>
