Infinite-scrolling with js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+        <h1 class='head'>The Infinite-Scroll</h1>
+    </div>
   </body>
 </html>
 <script src="index.js"></script>
